--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,15 @@
-RewriteEngine On
+RewriteEngine on
 
-RewriteCond %{REQUEST_FILENAME} -f [NC,OR]
-RewriteCond %{REQUEST_FILENAME} -d [NC]
-RewriteRule .* - [L]
-RewriteRule ^([A-Za-z0-9-_\s~><?&!()\@\=\|\*\"\:\|\;\,\+\'\/]+)$ content.php?page_name={$1} [L]
-php_value date.timezone "Australia/NSW"
+RewriteCond %{REQUEST_URI} !.*\.png$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.jpg$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.css$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.gif$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.js$ [NC]
+
+RewriteCond %{REQUEST_URI} !/admin
+
+
+
+RewriteRule . construction.php [L]
+
+
