--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
-RewriteEngine On
+  
+Order Allow,Deny
+Allow from 110.175.248.74
 
+RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -f [NC,OR]
 RewriteCond %{REQUEST_FILENAME} -d [NC]
 RewriteRule .* - [L]
