--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,9 @@
-  
+RewriteEngine On
+
 Order Allow,Deny
 Allow from 110.175.248.74
+Allow from 150.101.121.69
 
-RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -f [NC,OR]
 RewriteCond %{REQUEST_FILENAME} -d [NC]
 RewriteRule .* - [L]
